Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@
 <p><strong>Jerk du Jour</strong> lets you become guardians against jerkery. Report a jerk, and share their jerkishness with the world. Issue a citation to a jerk so they are acutely aware that they are being mercilessly snickered -- perhaps even chortled -- at on a public website! Earn badges. Earn promotions. And enforce classiness and civility wherever you go!</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="is-this-bullying" class="anchor" href="#is-this-bullying" aria-hidden="true"><span class="octicon octicon-link"></span></a>Is this Bullying?</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p><strong>No.</strong> Bullies are jerks. In fact, abusing <strong>Jerk du Jour</strong> for your own personal gain or to make baseless or excessive accusations is a very serious matter that won't be tolerated. We aim to be a lighthearted <em>(not quite whimsical)</em> safeguard against breaches of common courtesy, common sense, and common civility (see 'Jerks are Everywhere' above). Please refer actual crimes to actual police, and actual justice to the actual justice system.</p>
+
+<h3>
+<a id="the-commissioners" class="anchor" href="#the-commissioners" aria-hidden="true"><span class="octicon octicon-link"></span></a>The Commissioners</h3>
+
+<p><strong>Jerk du Jour</strong> is being developed by Steven Fricke and Brian Shef. Contact them for questions or support. Contact them with delicious craft beer for <em>superb and timely</em> support.</p>
         </section>
 
         <footer>
